tests/macro/empty_attr.stderr
error: Cannot parse attribute as list
 --> tests/macro/empty_attr.rs:6:3
  |
6 | #[endpoint]
  |   ^^^^^^^^

error: Attribute cannot be empty
  --> tests/macro/empty_attr.rs:10:3
   |
10 | #[endpoint()]
   |   ^^^^^^^^^^

warning: unused import: `rustify::endpoint::Endpoint`
 --> tests/macro/empty_attr.rs:1:5
  |
1 | use rustify::endpoint::Endpoint;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
